--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
       "pg": "0.6.15",
       "express": "latest",
+      "connect": "latest",
       "url": "latest"
   },
   "engines": {
